# Shuriken-Analyzer

./: .clang-tidy  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-ubuntu-mlir.yml  cmake-windows.yml  python-install.yml
shuriken/: CMakeLists.txt
shuriken-dump/: CMakeLists.txt  shuriken-dump.cpp
shuriken/bindings/Python/: setup.py
shuriken/bindings/Python/shuriken/: __init__.py  dex.py
shuriken/bindings/Python/tests/: test_apk.py  test_apk2.py  test_dex.py
shuriken/include/shuriken/analysis/Dex/: dex_analysis.h
shuriken/include/shuriken/api/C/: shuriken_core.h  shuriken_core_data.h
shuriken/include/shuriken/common/: extract_file.h
shuriken/include/shuriken/disassembler/Dex/: dex_opcodes.h
shuriken/include/shuriken/exceptions/: invalidinstruction_exception.h
shuriken/include/shuriken/parser/Dex/: dex_header.h  parser.h
shuriken/include/shuriken/parser/Macho/: macho_header.h
shuriken/lib/analysis/Dex/: analysis.cpp  basic_blocks.cpp  class_analysis.cpp  method_analysis.cpp
shuriken/lib/api/Dex/: apk_c_core_api.cpp  dex_c_core_api.cpp
shuriken/lib/common/: CMakeLists.txt  extract_file.cpp  shurikenstream.cpp
shuriken/lib/disassembler/Dex/: dex_disassembler.cpp  dex_instructions.cpp  disassembled_method.cpp  internal_disassembler.cpp  linear_sweep_disassembler.cpp
shuriken/lib/parser/Apk/: apk.cpp
shuriken/lib/parser/Dex/: dex_encoded.cpp  dex_methods.cpp  dex_protos.cpp
shuriken/lib/parser/Macho/: CMakeLists.txt  macho_header.cpp
shuriken/mjolnir/: CMakeLists.txt  README.md
shuriken/mjolnir/include/: shuriken_opt.h
shuriken/mjolnir/include/mjolnir/: CMakeLists.txt  MjolnIRDialect.h  MjolnIRDialect.td  MjolnIREnums.h  MjolnIROps.h  MjolnIROps.td  MjolnIRTypes.h  MjolnIRTypes.td
shuriken/mjolnir/include/passes/: dummy_pass.h  mjolnirtoopgraph.h  opt.h
shuriken/mjolnir/include/transform/: lifter.h  lower.h  mjolnir_to_smali.h
shuriken/mjolnir/lib/: CMakeLists.txt  shuriken_opt_lib.cpp
shuriken/mjolnir/lib/mjolnir/: CMakeLists.txt  MjolnIRDialect.cpp  MjolnIREnums.cpp  MjolnIROps.cpp  MjolnIRTypes.cpp
shuriken/mjolnir/lib/passes/: CMakeLists.txt  mjolnirtoopgraph.cpp  opt.cpp
shuriken/mjolnir/lib/transform/: CMakeLists.txt  lifter.cpp  mjolnir_to_smali.cpp
shuriken/mjolnir/lib/transform/lift_instructions/: Instruction10t.cpp  Instruction10x.cpp  Instruction11n.cpp  Instruction11x.cpp  Instruction12x.cpp  Instruction20t.cpp  Instruction21c.cpp  Instruction21h.cpp  Instruction21s.cpp  Instruction21t.cpp  Instruction22b.cpp  Instruction22c.cpp  Instruction22s.cpp  Instruction22t.cpp  Instruction22x.cpp  Instruction23x.cpp  Instruction30t.cpp  Instruction31c.cpp  Instruction31i.cpp  Instruction32x.cpp  Instruction35c.cpp  Instruction51l.cpp
shuriken/mjolnir/lib/transform/lower_instructions/: arith_to_smali.cpp  cf_to_smali.cpp  mjolnir_to_smali.cpp
shuriken/mjolnir/src/: shuriken_opt.cpp
shuriken/tests/: CMakeLists.txt
shuriken/tests/apk/: analyze-simple-zip.cpp  apk-core-api-test.cpp  dex-files-folder.in  get-analysis-objects-from-simple-zip.cpp
shuriken/tests/code/java/: BasicTest.java  CMakeLists.txt  ExceptionTest.java  FieldTest.java  MethodTest.java  TestFieldsLifter.java  _test_lifter.java
shuriken/tests/compiled/dex_files/: TestFieldsLifter.dex  _test_lifter.dex  classes.dex  exception_test.dex  field_test.dex  method_test.dex
shuriken/tests/dex/api/C/: CMakeLists.txt  test_basictest.cpp  test_disassembler.cpp  test_exceptions.cpp  test_fields.cpp  test_methods.cpp
shuriken/tests/dex/disassembler/: CMakeLists.txt
shuriken/tests/dex/parser/: CMakeLists.txt  headers-test-dex.cpp
shuriken/tests/macho/parser/: CMakeLists.txt  headers-test-macho.cpp  macho-files-folder.in
shuriken/tests/mjolnir/: CMakeLists.txt
